--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="titulo_historial">Historial de ventas enviadas</string>
+    <string name="btn_Actualizar">ACTUALIZAR</string>
 
 </resources>
