Cambios eliminación de cupos despues de enviar las ventas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="titulo_historial">Historial de ventas enviadas</string>
     <string name="btn_Actualizar">ACTUALIZAR</string>
+    <string name="regresar">Regresar</string>
 
 </resources>
