--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ARCH GLP MÓVIL</string>
+    <string name="app_name">DISTRIBUCIÓN DE GLP</string>
     <string name="titulo_activity_registro">PASO 1. BUSCAR SUJETO</string>
     <string name="titulo_activity_registro_paso2">PASO 2. SELECCIONAR SUJETO</string>
     <string name="titulo_activity_registro_paso3">PASO 3. COMPLETAR INFORMACION </string>
@@ -7,10 +7,14 @@
     <string name="ok">ACEPTAR</string>
 
 
-    <string name="opcion_registrar_venta">Registrar venta</string>
-    <string name="opcion_editar_venta">Editar venta</string>
-    <string name="opcion_enviar_ventas">Enviar ventas </string>
-    <string name="opcion_actualizar_cupos">Actualizar cupos</string>
+    <string name="opcion_registrar_venta">Vender GLP</string>
+    <string name="opcion_editar_venta">Editar Venta</string>
+    <string name="opcion_enviar_ventas">Enviar Ventas <b> (ARCH) </b> </string>
+    <string name="opcion_actualizar_cupos">Actualizar Cupos <b> (ARCH) </b></string>
+    <string name="opcion_historial">Historial Envío Ventas</string>
+    <string name="opcion_cambiar_clave">Cambiar Clave</string>
+    <string name="opcion_cerrar_sesion">Cerrar Sesión</string>
+
     <string name="title_activity_cliente_ws">ClienteWSActivity</string>
     <string name="title_activity_cupos">ACTUALIZAR CUPOS</string>
     <string name="title_activity_consulta_venta">ConsultaVentaActivity</string>
@@ -37,7 +41,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="btn_Actualizar">ACTUALIZAR</string>
-    <string name="regresar">Ir a ventas</string>
+    <string name="regresar">Regresar</string>
     <string-array name="spinnerDia">
         <item>01</item>
         <item>02</item>
