--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="btn_Actualizar">ACTUALIZAR</string>
     <string name="regresar">Regresar</string>
+    <string name="hintIdentificacion">Número de Identificación</string>
+    <string name="hintUsuario">Ingrese usuario</string>
+    <string name="hintIngreseClave">Ingrese la clave</string>
     <string-array name="spinnerDia">
         <item>01</item>
         <item>02</item>
